crates/swc_ts_fast_strip/tests/errors/assertion-precedence-satisfies.ts
1 + 1 satisfies number / 2;
a + b * c satisfies T / d;
